Prevented flickering on dropdown menu

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -285,6 +285,8 @@ html, body{
     padding-top: 80px;
     padding-bottom: 0px;
     transition: all 0.5s ease;
+    transform: translateZ(0);
+    backface-visibility: hidden;
     opacity: 0;
 }
 .dropdown-menu.show {
